--- a/hdp/public/index.html
+++ b/hdp/public/index.html
@@ -64,8 +64,7 @@
         documentos.</p>
 
     </div>
-    <div class="fundoSN">
-    </div>
+    <div class="fundoSN"></div>
   </div>
 
   <div class="banner2">
@@ -141,6 +140,9 @@
   <div class="footer">
 
     <h4>Contato: HistoricalDocument@gmail.com </h4>
+    <h4><a
+        href="https://bandteccom-my.sharepoint.com/:u:/g/personal/gabriel_bellintani_sptech_school/ESmZJEM1hM1LkfyMHMlbBGYBcC9JoWDg3tv1jKw2yCWe9w?e=EE1Zlq"
+        download="Manual-de-instalação-HDP">Manual de Instalação da Aplicação</a></h4>
     <h4>SPTech &copy; 2024</h4>
     <span class="version">v1.0.0</span>
 
