--- a/hdp/public/dashboard/dashInicio.html
+++ b/hdp/public/dashboard/dashInicio.html
@@ -30,12 +30,20 @@
         <div class="blocoLateral">
             <div class="menu">
                 <div class="informacoes">
-                    <h5>Olá,<span id="span_nomeUsuario"> </span></h5>
+                    <h4>Olá,<span id="span_nomeUsuario"> </span></h4>
                     <p><span id="span_emailUsuario"></span></p>
                 </div>
                 <div class="acesso">
-                    <a href="../index.html" style="color: #ffffff;"><h3>HOME</h></a>
-                        <h3 style="color: rgb(221, 148, 13);">DASHBOARD</h3>
+                    <a href="../index.html" style="color: #ffffff;">
+                        <h3>HOME</h3>
+                    </a>
+                    <a href="dashInicio.html" style="color: #ffffff;">
+                        <h3 style="color: #DD940D;">DASHBOARD</h3>
+                    </a>                    
+                    <a href="../dashboard/HDP-IA.html">
+                        <h3>AJUDA</h3>
+                    </a>
+
                 </div>
             </div>
         </div>
