--- a/hdp/public/dashboard/tela-info1.html
+++ b/hdp/public/dashboard/tela-info1.html
@@ -14,38 +14,36 @@
         <div class="container">
             <div class="blocoNavbar">
                 <ul class="navbar">
-                    <a href="../index.html">
-                        <li>Home</li>
-                    </a>
-                    <a href="../index.html #sobreNos">
-                        <li>Sobre nós</li>
-                    </a>
+                    <a href="../index.html"><li>Home</li></a>
+                    <a href="../index.html #sobreNos"><li>Sobre nós</li></a>
                     <li>|</li>
                     <li style="color: rgb(221, 148, 13);">Dashboard</li>
-                    </a>
-                    <a href="dashInicio.html" style="text-decoration: none;">
-                        <li style="color: white;">Voltar</li>
-                    </a>
+                    <a href="dashInicio.html"><li>Voltar</li></a>
                 </ul>
 
             </div>
             <div class="trianguloDireita"></div>
             <div class="logo"></div>
         </div>
-
     </div>
     <div class="corpoGeral">
         <div class="blocoLateral">
             <div class="menu">
                 <div class="informacoes">
-                    <h5>Olá,<span id="span_nomeUsuario"> </span></h5>
+                    <h4>Olá,<span id="span_nomeUsuario"> </span></h4>
                     <p><span id="span_emailUsuario"></span></p>
                 </div>
                 <div class="acesso">
                     <a href="../index.html" style="color: #ffffff;">
-                        <h3>HOME</h>
+                        <h3>HOME</h3>
                     </a>
-                    <h3 style="color: rgb(221, 148, 13);">DASHBOARD</h3>
+                    <a href="dashInicio.html" style="color: #ffffff;">
+                        <h3 style="color: #DD940D;">DASHBOARD</h3>
+                    </a>                    
+                    <a href="../dashboard/HDP-IA.html">
+                        <h3>AJUDA</h3>
+                    </a>
+
                 </div>
             </div>
         </div>
