--- a/hdp/public/index.html
+++ b/hdp/public/index.html
@@ -68,34 +68,66 @@
     </div>
   </div>
 
-  <div class="banner2">
-    <div class="container">
-      <div class="box">
-        <img src="assets/imgs/pilha-de-livros.png" alt="" class="img3">
-        <p> Mais de 60%dos livros e
-          documentos históricos são
-          perdidos por ano, devido
-          ao controle indevido de
-          temperatura e umidade.</p>
+
+  <div class="corpo4">
+  
+    <div class="caixas">
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img
+              src="assets/imgs/pilha-de-livros.png"
+              alt=""  style="width:200px;height:200px; margin: 10px;">
+          </div>
+          <div class="flip-card-back">
+            <h1>Documentos</h1>
+            <p style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"> Mais de 60% dos livros e
+              documentos históricos são
+              perdidos por ano, devido
+              ao controle indevido de
+              temperatura e umidade.</p>
+
+          </div>
+        </div>
       </div>
-      <div class="box">
-        <img src="assets/imgs/iconeTemperatura.png" alt="" class="img4">
-        <p>É de extrema importância
-          manter a temperatura ideal
-          em seus acervos para
-          evitar danos irreversíveis
-          causados pela degradação
-          do papel.</p>
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img
+              src="assets/imgs/iconeTemperatura.png"
+              alt=""  style="width:210px;height:140px;margin: 30px;margin-left:40px ;margin-top: 40px ;">
+          </div>
+          <div class="flip-card-back">
+            <h1>Temperatura</h1>
+            <p style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">É de extrema importância
+              manter a temperatura ideal
+              em seus acervos para
+              evitar danos irreversíveis
+              causados pela degradação
+              do papel.</p>
+
+          </div>
+        </div>
       </div>
-      <div class="box">
-        <img src="assets/imgs/iconeUmidade.png" alt="" class="img5">
-        <p>Manter a umidade ideal nos
-          acervos é importante para
-          preservar a integridade
-          física dos livros. Umidade
-          excessiva pode levar à
-          proliferação de fungos e
-          mofos</p>
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img
+              src="assets/imgs/iconeUmidade.png"
+              alt="" style="width:230px;height:150px;margin: 30px;">
+          </div>
+          <div class="flip-card-back">
+            <h1>Umidade</h1>
+            <p style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Manter a umidade ideal nos
+              acervos é importante para
+              preservar a integridade
+              física dos livros. Umidade
+              excessiva pode levar à
+              proliferação de fungos e
+              mofos</p>
+
+          </div>
+        </div>
       </div>
     </div>
   </div>
