mudanças no css da dashboard e index

--- a/hdp/public/index.html
+++ b/hdp/public/index.html
@@ -71,12 +71,12 @@
   <div class="corpo4">
   
     <div class="caixas">
-      <div class="flip-card">
+      <div class="flip-card" >
         <div class="flip-card-inner">
           <div class="flip-card-front">
             <img
-              src="assets/imgs/pilha-de-livros.png"
-              alt=""  style="width:200px;height:200px; margin: 10px;">
+              src="assets/imgs/imagemLivros.png"
+              alt=""  style="width:170px;height:180px;">
           </div>
           <div class="flip-card-back">
             <h1>Documentos</h1>
@@ -94,7 +94,7 @@
           <div class="flip-card-front">
             <img
               src="assets/imgs/iconeTemperatura.png"
-              alt=""  style="width:210px;height:140px;margin: 30px;margin-left:40px ;margin-top: 40px ;">
+              alt=""  style="width:180px;height:150px;">
           </div>
           <div class="flip-card-back">
             <h1>Temperatura</h1>
@@ -113,7 +113,7 @@
           <div class="flip-card-front">
             <img
               src="assets/imgs/iconeUmidade.png"
-              alt="" style="width:230px;height:150px;margin: 30px;">
+              alt="" style="width:350px;height:150px;">
           </div>
           <div class="flip-card-back">
             <h1>Umidade</h1>
@@ -172,7 +172,7 @@
   <div class="footer">
 
     <h4>Contato: HistoricalDocument@gmail.com </h4>
-    <h4><a
+    <h4><a style="color: white;"
         href="https://bandteccom-my.sharepoint.com/:u:/g/personal/gabriel_bellintani_sptech_school/ESmZJEM1hM1LkfyMHMlbBGYBcC9JoWDg3tv1jKw2yCWe9w?e=EE1Zlq"
         download="Manual-de-instalação-HDP">Manual de Instalação da Aplicação</a></h4>
     <h4>SPTech &copy; 2024</h4>
