--- a/hdp/public/dashboard/dashInicio.html
+++ b/hdp/public/dashboard/dashInicio.html
@@ -9,16 +9,22 @@
     <link rel="stylesheet" href="../css/style-dashboard.css">
 </head>
 
-<body >
+<body>
     <div class="header">
         <div class="container">
             <div class="blocoNavbar">
                 <ul class="navbar">
-                    <a href="../index.html"><li>Home</li></a>
-                    <a href="../index.html #sobreNos"><li>Sobre nós</li></a>
+                    <a href="../index.html">
+                        <li>Home</li>
+                    </a>
+                    <a href="../index.html #sobreNos">
+                        <li>Sobre nós</li>
+                    </a>
                     <li>|</li>
                     <li style="color: rgb(221, 148, 13);">Dashboard</li>
-                    <a href="../loginHDP.html"><li>Sair</li></a>
+                    <a href="../loginHDP.html">
+                        <li>Sair</li>
+                    </a>
                 </ul>
 
             </div>
@@ -30,7 +36,7 @@
         <div class="blocoLateral">
             <div class="menu">
                 <div class="informacoes">
-                    <h4>Olá,<span id="span_nomeUsuario"> </span></h4>
+                    <h4>Olá, <span id="span_nomeUsuario"> </span></h4>
                     <p><span id="span_emailUsuario"></span></p>
                 </div>
                 <div class="acesso">
@@ -39,7 +45,7 @@
                     </a>
                     <a href="dashInicio.html" style="color: #ffffff;">
                         <h3 style="color: #DD940D;">DASHBOARD</h3>
-                    </a>                    
+                    </a>
                     <a href="../dashboard/HDP-IA.html">
                         <h3>AJUDA</h3>
                     </a>
@@ -60,16 +66,18 @@
             <div class="cardGeral">
                 <div class="card">
                     <div class="cardInt">
-                        <h1><h1 id="qtdFora"></h1>/<h1 id="qtdTotal"></h1></h1>
+                        <div style="display: flex; flex-direction: row; height: 18vh; align-items: center;">
+                            <h1 id="qtdFora"></h1><h1>/</h1><h1 id="qtdTotal"></h1>
+                        </div>
                         <h4 style="font-size: 120%;">Salas com registros</h4>
                         <h5>Fora do ideal</h5>
                     </div>
                     <div><a href="tela-info1.html"><button>SAIBA MAIS</button></a></div>
                     <div class="infoExtra">
                         <div class="textoExtra">
-                        <span>Salas registram Temperatura ou Umidade fora do ideal<p>Seus livros e documentos podem
-                            estar em
-                            risco devido aos registros inadequados de temperatura umidade nas salas.</p></span>
+                            <span>Salas registram Temperatura ou Umidade fora do ideal<p>Seus livros e documentos podem
+                                    estar em
+                                    risco devido aos registros inadequados de temperatura umidade nas salas.</p></span>
                         </div>
                         <div class="trianguloBaixo"></div>
                         <div class="cardIntExtra">
@@ -85,10 +93,10 @@
                     <div><a href="tela-info2.html"><button>SAIBA MAIS</button></a></div>
                     <div class="infoExtra">
                         <div class="textoExtra">
-                        <span>Tempo que Salas Ficaram em Condições Inadequadas<p>Seus livros e documentos podem
-                                estar em
-                                risco devido ao grande período de tempo em condições inadequadas.</p></span>
-                            </div>
+                            <span>Tempo que Salas Ficaram em Condições Inadequadas<p>Seus livros e documentos podem
+                                    estar em
+                                    risco devido ao grande período de tempo em condições inadequadas.</p></span>
+                        </div>
                         <div class="trianguloBaixo">
                         </div>
                     </div>
@@ -111,27 +119,27 @@
     contarSalasTotais(sessionStorage.FK_EMPRESA)
 
     function contarSalasTotais(fkEmpresa) {
-    fetch(`/registro/contarSalasTotais/${fkEmpresa}`, {
-        method: "GET",
-        headers: {
-            "Content-Type": "application/json"
-        }
-    }).then(function (resposta) {
-        console.log("ESTOU NO THEN DO contarSalasTotais()!")
+        fetch(`/registro/contarSalasTotais/${fkEmpresa}`, {
+            method: "GET",
+            headers: {
+                "Content-Type": "application/json"
+            }
+        }).then(function (resposta) {
+            console.log("ESTOU NO THEN DO contarSalasTotais()!")
 
-        if (resposta.ok) {
-            console.log("Função Contar Usuarios(): ")
+            if (resposta.ok) {
+                console.log("Função Contar Usuarios(): ")
 
-            resposta.json().then(function (resposta) {
-                var dados = resposta[0];
+                resposta.json().then(function (resposta) {
+                    var dados = resposta[0];
 
-                console.log(dados);
-                qtdTotal.innerHTML = dados.salas;
+                    console.log(dados);
+                    qtdTotal.innerHTML = dados.salas;
 
-            })
-        }
-    })
-}
+                })
+            }
+        })
+    }
 
 </script>
 
